updated readme and todo

--- a/TODO
+++ b/TODO
@@ -1,6 +1,15 @@
 
 TODO list
 
-Besides that, EVERYTHING !!! :-D
+	- Quaternion camera
+	- Fix compass objects positioning relative to the turn (or just have the compass fixed)
+	- True type text
+	- Sound
+	- Plot (storie)
+	- Game state
+
+	- Time's up, deliver jam...  :-/
+
+
 
 
